--- a/index.html
+++ b/index.html
@@ -11,6 +11,72 @@
         <title>Tic Tac Toe</title>
     </head>
     <body>
+        <header>
+            <h1>Tic Tac Toe</h1>
+        </header>
+
+        <form>
+            <div class="player-setup">
+                <div class="player-name">
+                    <input
+                        type="text"
+                        name="player1Name"
+                        placeholder="name"
+                    />
+                </div>
+                <div class="symbols">
+                    <div class="symbol">
+                        <input
+                            type="radio"
+                            value="x"
+                            id="x1"
+                            name="player1Symbol"
+                        />
+                        <label for="x1">x</label>
+                    </div>
+                    <div class="symbol">
+                        <input
+                            type="radio"
+                            value="o"
+                            id="o1"
+                            name="player1Symbol"
+                        />
+                        <label for="o1">o</label>
+                    </div>
+                </div>
+            </div>
+            <div class="player-setup">
+                <div class="player-name">
+                    <input
+                        type="text"
+                        name="player2Name"
+                        placeholder="name"
+                    />
+                </div>
+                <div class="symbols">
+                    <div class="symbol">
+                        <input
+                            type="radio"
+                            value="x"
+                            id="x2"
+                            name="player2Symbol"
+                        />
+                        <label for="x2">x</label>
+                    </div>
+                    <div class="symbol">
+                        <input
+                            type="radio"
+                            value="o"
+                            id="o2"
+                            name="player2Symbol"
+                        />
+                        <label for="o2">o</label>
+                    </div>
+                </div>
+            </div>
+            <button id="submit">start</button>
+        </form>
+
         <script src="main.js"></script>
     </body>
 </html>
