Add gameboard, scoreboard markup

--- a/index.html
+++ b/index.html
@@ -77,6 +77,47 @@
             <button id="submit">start</button>
         </form>
 
+        <main>
+            <div class="game">
+                <div class="scoreboard">
+                    <div class="name">Player 1</div>
+                    <div class="scoreboard-body">
+                        <div class="scoreboard-row">
+                            <span>score:</span> <span>2</span>
+                        </div>
+                    </div>
+                    <div class="scoreboard-row">
+                        <span>symbol:</span> <span>x</span>
+                    </div>
+                </div>
+                <div class="gameboard">
+                    <div class="tile" data-index="0"></div>
+                    <div class="tile" data-index="1"></div>
+                    <div class="tile" data-index="2"></div>
+                    <div class="tile" data-index="3"></div>
+                    <div class="tile" data-index="4"></div>
+                    <div class="tile" data-index="5"></div>
+                    <div class="tile" data-index="6"></div>
+                    <div class="tile" data-index="7"></div>
+                    <div class="tile" data-index="8"></div>
+                </div>
+                <div class="scoreboard">
+                    <div class="name">Player 1</div>
+                    <div class="scoreboard-body">
+                        <div class="scoreboard-row">
+                            <span>score:</span> <span>2</span>
+                        </div>
+                    </div>
+                    <div class="scoreboard-row">
+                        <span>symbol:</span> <span>o</span>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <button class="restart">restart</button>
+            </div>
+        </main>
+
         <script src="main.js"></script>
     </body>
 </html>
