Style player setup form

--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
 
         <form>
             <div class="player-setup">
-                <div class="player-name">
-                    <input
-                        type="text"
-                        name="player1Name"
-                        placeholder="name"
-                    />
-                </div>
+                <input
+                    class="player-name"
+                    type="text"
+                    name="player1Name"
+                    value="Player 1"
+                />
                 <div class="symbols">
                     <div class="symbol">
                         <input
@@ -46,13 +45,12 @@
                 </div>
             </div>
             <div class="player-setup">
-                <div class="player-name">
-                    <input
-                        type="text"
-                        name="player2Name"
-                        placeholder="name"
-                    />
-                </div>
+                <input
+                    class="player-name"
+                    type="text"
+                    name="player2Name"
+                    value="Player 2"
+                />
                 <div class="symbols">
                     <div class="symbol">
                         <input
@@ -74,7 +72,7 @@
                     </div>
                 </div>
             </div>
-            <button id="submit">start</button>
+            <button class="submit" id="submit">start</button>
         </form>
 
         <main>
