--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                         <div class="scoreboard-row">
                             <span>score:</span> <span>2</span>
                         </div>
-                    </div>
-                    <div class="scoreboard-row">
-                        <span>symbol:</span> <span>x</span>
+                        <div class="scoreboard-row">
+                            <span>symbol:</span> <span>x</span>
+                        </div>
                     </div>
                 </div>
                 <div class="gameboard">
@@ -105,14 +105,14 @@
                         <div class="scoreboard-row">
                             <span>score:</span> <span>2</span>
                         </div>
-                    </div>
-                    <div class="scoreboard-row">
-                        <span>symbol:</span> <span>o</span>
+                        <div class="scoreboard-row">
+                            <span>symbol:</span> <span>o</span>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div>
-                <button class="restart">restart</button>
+            <div class="restart">
+                <button>restart</button>
             </div>
         </main>
 
