--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <button class="submit" id="submit">start</button>
         </form>
 
-        <main>
+        <main class="hide">
             <div class="game">
                 <div class="scoreboard">
                     <div class="name">Player 1</div>
