--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Tic Tac Toe</h1>
         </header>
 
-        <form>
+        <form class="hide">
             <div class="player-setup">
                 <input
                     class="player-name"
@@ -30,6 +30,7 @@
                             value="x"
                             id="x1"
                             name="player1Symbol"
+                            checked
                         />
                         <label for="x1">x</label>
                     </div>
@@ -67,6 +68,7 @@
                             value="o"
                             id="o2"
                             name="player2Symbol"
+                            checked
                         />
                         <label for="o2">o</label>
                     </div>
@@ -75,7 +77,7 @@
             <button class="submit" id="submit">start</button>
         </form>
 
-        <main class="hide">
+        <main>
             <div class="game">
                 <div class="scoreboard">
                     <div class="name">Player 1</div>
@@ -89,8 +91,8 @@
                     </div>
                 </div>
                 <div class="gameboard">
-                    <div class="tile" data-index="0"></div>
-                    <div class="tile" data-index="1"></div>
+                    <div class="tile" data-index="0">x</div>
+                    <div class="tile" data-index="1">o</div>
                     <div class="tile" data-index="2"></div>
                     <div class="tile" data-index="3"></div>
                     <div class="tile" data-index="4"></div>
