--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                     </div>
                 </div>
                 <div class="gameboard">
-                    <div class="tile" data-index="0">x</div>
-                    <div class="tile" data-index="1">o</div>
+                    <div class="tile" data-index="0"></div>
+                    <div class="tile" data-index="1"></div>
                     <div class="tile" data-index="2"></div>
                     <div class="tile" data-index="3"></div>
                     <div class="tile" data-index="4"></div>
