--- a/index.html
+++ b/index.html
@@ -79,14 +79,16 @@
 
         <main>
             <div class="game">
-                <div class="scoreboard">
+                <div class="scoreboard" id="p1">
                     <div class="name">Player 1</div>
                     <div class="scoreboard-body">
                         <div class="scoreboard-row">
-                            <span>score:</span> <span>2</span>
+                            <span>score:</span>
+                            <span data-score>2</span>
                         </div>
                         <div class="scoreboard-row">
-                            <span>symbol:</span> <span>x</span>
+                            <span>symbol:</span>
+                            <spanl>x</spanl>
                         </div>
                     </div>
                 </div>
@@ -101,14 +103,16 @@
                     <div class="tile" data-index="7"></div>
                     <div class="tile" data-index="8"></div>
                 </div>
-                <div class="scoreboard">
+                <div class="scoreboard" id="p2">
                     <div class="name">Player 1</div>
                     <div class="scoreboard-body">
                         <div class="scoreboard-row">
-                            <span>score:</span> <span>2</span>
+                            <span>score:</span>
+                            <span data-score>2</span>
                         </div>
                         <div class="scoreboard-row">
-                            <span>symbol:</span> <span>o</span>
+                            <span>symbol:</span>
+                            <span>o</span>
                         </div>
                     </div>
                 </div>
