--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
         <form>
             <div class="player-setup">
+                <input type="hidden" name="player1Id" value="1" />
                 <input
                     class="player-name"
                     type="text"
@@ -46,6 +47,7 @@
                 </div>
             </div>
             <div class="player-setup">
+                <input type="hidden" name="player2Id" value="2" />
                 <input
                     class="player-name"
                     type="text"
@@ -79,7 +81,7 @@
 
         <main class="hide">
             <div class="game">
-                <div class="scoreboard" id="p1">
+                <div class="scoreboard">
                     <div class="name">Player 1</div>
                     <div class="scoreboard-body">
                         <div class="scoreboard-row">
@@ -103,7 +105,7 @@
                     <div class="tile" data-index="7"></div>
                     <div class="tile" data-index="8"></div>
                 </div>
-                <div class="scoreboard" id="p2">
+                <div class="scoreboard">
                     <div class="name">Player 1</div>
                     <div class="scoreboard-body">
                         <div class="scoreboard-row">
