Add negate symbol pick for second player

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                             value="x"
                             id="x1"
                             name="player1Symbol"
+                            data-opposite-symbol="o2"
                             checked
                         />
                         <label for="x1">x</label>
@@ -41,6 +42,7 @@
                             value="o"
                             id="o1"
                             name="player1Symbol"
+                            data-opposite-symbol="x2"
                         />
                         <label for="o1">o</label>
                     </div>
@@ -61,6 +63,7 @@
                             value="x"
                             id="x2"
                             name="player2Symbol"
+                            data-opposite-symbol="o1"
                         />
                         <label for="x2">x</label>
                     </div>
@@ -70,6 +73,7 @@
                             value="o"
                             id="o2"
                             name="player2Symbol"
+                            data-opposite-symbol="x1"
                             checked
                         />
                         <label for="o2">o</label>
